1, 增加断开网络的提示 2， app 名称

--- a/NewTvuoo/NewTvuoo-Info.plist
+++ b/NewTvuoo/NewTvuoo-Info.plist
@@ -13,7 +13,7 @@
 		<string>120-icon.png</string>
 	</array>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>厅游助手</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
