--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 #这个是记录ui更新的文件，所以不需要版本控制
 NewTvuoo.xcodeproj/project.xcworkspace/xcuserdata/xubo.xcuserdatad/UserInterfaceState.xcuserstate
+NewTvuoo.xcodeproj/project.xcworkspace/xcuserdata/wanghe.xcuserdatad/UserInterfaceState.xcuserstate
